--- a/final-project.Rmd
+++ b/final-project.Rmd
@@ -1,28 +1,38 @@
 ---
-title: "420 final project"
-output: html_document
+title: 'STAT 420 Final Project'
+author: "Yijun Zhao, "
+date: 'December 14, 2020'
+output:
+  html_document:
+    theme: readable
+    toc: yes
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Import Dataset
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r}
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
 ```
 
-## Including Plots
+## Introduction (basic information)
 
-You can also embed plots, for example:
+```{r}
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## Data preparation
+
+```{r}
+
+```
+
+## Model establishment and selection
+
+```{r}
+#Multiple linear regression, Dummy variables, Interaction, Residual diagnostics, Outlier diagnostics, Transformations, Polynomial regression, Model selection, etc.
+```
+
