--- a/final-project.Rmd
+++ b/final-project.Rmd
@@ -25,7 +25,17 @@ Nowadays, more and more people consider purchasing a used car instead of buying 
 India has a huge market for the used car business. According to the study on the sector, the Indian used car industry possesses significant potential, which was valued at USD 24.24 billion in 2019. Therefore, this dataset should contain much useful information, and be able to help us to construct an efficient model that can predict used/secondhand car prices given some predictor variables. 
 
 ### Data File Description
-Our dataset focuses on several characteristics of used cars in India. It contains 6018 observations and 13 variables:
+Our dataset focuses on several characteristics of used cars in India. It contains 6018 observations and 13 variables, including several categorical variables, such as Transmission Types and Fuel Types. Also, it has continuous variables: Mileage, Year and Power and discrete variable: Number of Seats. For this project, the Used Car Price would be the numeric response variable and the left being dependent variables. 
+
+### Data File Link
+The data file can retrived from https://www.kaggle.com/avikasliwal/used-cars-price-prediction?select=train-data.csv as "train-data.csv."
+
+## Methods
+
+### Original Data Profile
+For further model development, it is essential to take an overview on the original data file. 
+
+There are 6018 observations and 13 variables:
 
 1 numeric response variable:
 
@@ -49,26 +59,23 @@ Our dataset focuses on several characteristics of used cars in India. It contain
 - `Power`: the car's power in bhp
 - `New Price`: the car price when it's new in INR Lakhs
 
-### Data File Link
-The data file can retrived from https://www.kaggle.com/avikasliwal/used-cars-price-prediction?select=train-data.csv as "train-data.csv."
-
-## Import Dataset
-
+The following displays the summary of the original data file and plots of repsonses variables with the numeric variables, excluding `New_Price` because of  too many missing values.
 ```{r}
-
+original = read.csv("used_car.csv")
+summary(original)
+```
+```{r, echo = FALSE}
+plot(Price ~ Kilometers_Driven, data = original, pch = 20, col = "darkgreen",main = "Price vs Kilometes_Driven", cex = 1)
+plot(Price ~ Power, data = original, pch = 20, col = "darkgreen", main = "Price vs Power", cex = 1)
+plot(Price ~ Mileage, data = original, pch = 20, col = "darkgreen", main = "Price vs Mileage", cex = 1)
+plot(Price ~ Engine, data = original, pch = 20, col = "darkgreen", main = "Price vs Engine", cex = 1)
+plot(Price ~ Year, data = original, pch = 20, col = "darkgreen", main = "Price vs Year", cex = 1)
 ```
 
-## Introduction (basic information)
+### Additional Data Preparation
 
-```{r}
 
-```
 
-## Data preparation
-
-```{r}
-
-```
 
 ## Model establishment and selection
 
